--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
+              <a class="nav-link" aria-current="page" href="/index2.html"
                 >About us</a
               >
             </li>
@@ -60,7 +60,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/contact.html"
+              <a class="nav-link" aria-current="page" href="/index3.html"
                 >Contact us</a
               >
             </li>
