--- a/index3.html
+++ b/index3.html
@@ -36,7 +36,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about.html"
+              <a class="nav-link active" aria-current="page" href="/index2.html"
                 >About us</a
               >
             </li>
@@ -60,7 +60,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/contact.html"
+              <a class="nav-link" aria-current="page" href="/index3.html"
                 >Contact us</a
               >
             </li>
@@ -80,46 +80,80 @@
       </div>
     </nav>
 
-    <div class="container-md my-5">
-      <h2>contact us</h2>
-      <form class="row g-3">
-        <div class="col-md-6">
-          <label for="inputEmail4" class="form-label">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" />
+    <div class="container my-3">
+      <div
+        class="row featurette d-flex justify-content-center align-items-center"
+      >
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            Its all about iCoder ideas.
+            <span class="text-muted">It’ll blow your mind.</span>
+          </h2>
+          <p class="lead">
+            Some great placeholder content for the first featurette here.
+            Imagine some exciting prose here.
+          </p>
         </div>
-        <div class="col-md-6">
-          <label for="inputPassword4" class="form-label">Phone No</label>
-          <input type="password" class="form-control" id="inputPassword4" />
+        <div class="col-md-5">
+          <img
+            class="d-block w-100 img-fluid"
+            src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="photo-1"
+          />
         </div>
-        <div class="col-md-4">
-          <label for="inputState" class="form-label">Type of query</label>
-          <select id="inputState" class="form-select">
-            <option selected>Choose...</option>
-            <option>Devlopment</option>
-            <option>Technology</option>
-            <option>Business</option>
-            <option>Colaboration</option>
-            <option>career</option>
-          </select>
+      </div>
+    </div>
+    <div class="container my-3">
+      <div
+        class="row featurette d-flex justify-content-center align-items-center"
+      >
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading">
+            iCoder started in 2024.
+            <span class="text-muted">It’ll blow your mind.</span>
+          </h2>
+          <p class="lead">
+            Some great placeholder content for the first featurette here.
+            Imagine some exciting prose here.
+          </p>
         </div>
-        <div class="input-group">
-          <span class="input-group-text">Tell us about query</span>
-          <textarea class="form-control" aria-label="With textarea"></textarea>
+        <div class="col-md-5">
+          <img
+            class="d-block w-100 img-fluid"
+            src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHRlY2hub2xvZ3l8ZW58MHx8MHx8fDA%3D"
+            alt="photo"
+          />
         </div>
+      </div>
+    </div>
 
-        <div class="col-12"></div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+    <div class="container my-3 order-md-1">
+      <div
+        class="row featurette d-flex justify-content-center align-items-center"
+      >
+        <div class="col-md-7">
+          <h2 class="featurette-heading">
+            iCoder always celebrate new ideas.
+            <span class="text-muted">It’ll blow your mind.</span>
+          </h2>
+          <p class="lead">
+            Some great placeholder content for the first featurette here.
+            Imagine some exciting prose here.
+          </p>
         </div>
-      </form>
+        <div class="col-md-5">
+          <img
+            class="d-block w-100 img-fluid"
+            src="https://plus.unsplash.com/premium_photo-1683120730432-b5ea74bd9047?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="photo-2"
+          />
+        </div>
+      </div>
     </div>
 
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>
-        © 2023–2024 iCoder, Inc. · <a href="#">Privacy</a> ·
-        <a href="#">Terms</a>
-      </p>
+      <p>© 2023–2024 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer>
 
     <script
