--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index2.html"
+              <a class="nav-link" aria-current="page" href="https://github.com/sandip9851/bootstrap-project/blob/main/index2.html"
                 >About us</a
               >
             </li>
