--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a class="nav-link active" aria-current="page" href="/bootstrap-project/"
                 >Home</a
               >
             </li>
@@ -60,7 +60,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index3.html"
+              <a class="nav-link" aria-current="page" href="/bootstrap-project/index3.html"
                 >Contact us</a
               >
             </li>
